# home-ifttt

./: .ebignore  .gitignore  README.md  application.py  gunicorn-home.service  pyproject.toml  requirements.txt  server.conf
